opam-version: "2.0"
maintainer: "Rizo I. <rizo@odis.io>"
authors: "Rizo I. <rizo@odis.io>"
homepage: "https://github.com/odis-labs/helix"
bug-reports: "https://github.com/odis-labs/helix/issues"
synopsis: "Build reactive web interfaces with OCaml"

depends: [
  "ocaml" {= "4.14.0"}
  "dune" {build}
  "js_of_ocaml-compiler" {build & >= "4.1.0"}
  "signal"
  #"jx"
  #"stdweb"
  "ocaml-lsp-server" {with-dev-setup}
  "ocamlformat" {with-dev-setup}
]

pin-depends: [
  ["signal.dev" "git+https://github.com/rizo/signal#3f0cd508823f233d77d72f5a37f9ae78107565de"]
  #["jx.dev" "git+https://github.com/rizo/jx#a0bcc27625e0a30014ba12363339469e30727d12"]
  #["stdweb.dev" "git+https://github.com/rizo/stdweb#facf7ab505d644fa409da166615846f74c5948ba"]
]