opam-version: "2.0"
maintainer: "Rizo I. <rizo@odis.io>"
authors: "Rizo I. <rizo@odis.io>"
homepage: "https://github.com/odis-labs/helix"
bug-reports: "https://github.com/odis-labs/helix/issues"
synopsis: "Build reactive web interfaces with OCaml"

build: [
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml"
  "dune" {build}
  "signal"
  "js_of_ocaml-compiler" {build & >= "4.1.0"} # jx.jsoo
  "odoc" {with-doc}
  "ocaml-lsp-server" {with-dev-setup}
  "ocamlformat" {with-dev-setup}
]

pin-depends: [
  ["signal.dev" "git+https://github.com/rizo/signal#8c27848ecef0b4763573f9108b4857799fc03b9a"]
]
