opam-version: "2.0"
maintainer: "Rizo I. <rizo@odis.io>"
authors: "Rizo I. <rizo@odis.io>"
homepage: "https://github.com/odis-labs/helix"
bug-reports: "https://github.com/odis-labs/helix/issues"
synopsis: "Build reactive web interfaces with OCaml"

build: [
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml"
  "dune" {build}
  "signal"
  "js_of_ocaml-compiler" {build & >= "4.1.0"}
  "odoc" {with-doc}
]
