(executables
 (names
  test_conditional
  test_each
  test_show
  test_router
  test_cleanup
  test_basic)
 (libraries helix signal stdweb html jx_jsoo)
 (modes js))

(alias
 (name runtest)
 (deps
  test_conditional.bc.js
  test_conditional.html
  test_each.bc.js
  test_each.html
  test_show.bc.js
  test_show.html
  test_router.bc.js
  test_router.html
  test_cleanup.bc.js
  test_cleanup.html
  test_basic.bc.js
  test_basic.html))
